--- a/public/simon-plus/index.html
+++ b/public/simon-plus/index.html
@@ -20,40 +20,40 @@
       <div>
         <p color="grey7" class="step" style="color: rgb(202, 202, 202); text-transform: uppercase;">STEP 3 OF 3</p>
         <div>
-          <h3 class="header" style="color: rgb(249, 249, 249); margin: 0px;"><span><p display="inline" color="inherit" font-size="inherit" font-weight="inherit" class="sc-gzVnrw cSBsCl" style="color: inherit; display: inline; letter-spacing: initial; line-height: 1.53; font-family: inherit; font-size: inherit; margin: 0px; text-align: left; max-width: inherit;">Start streaming today</p></span></h3>
+          <h3 class="header" style="color: rgb(249, 249, 249); margin: 0px;"><span><p display="inline" color="inherit" font-size="inherit" font-weight="inherit" class="cSBsCl" style="color: inherit; display: inline; letter-spacing: initial; line-height: 1.53; font-family: inherit; font-size: inherit; margin: 0px; text-align: left; max-width: inherit;">Start streaming today</p></span></h3>
           <div>
-            <div class="subcopy" style="color: rgb(249, 249, 249); margin: 15px 0px 5px;"><span><p display="inline" color="inherit" font-size="inherit" font-weight="inherit" class="sc-gzVnrw cSBsCl" style="color: inherit; display: inline; letter-spacing: initial; line-height: 1.53; font-family: inherit; font-size: inherit; margin: 0px; text-align: left; max-width: inherit;">Endless stories for just $79.99/year.</p></span></div>
-            <div color="#cacaca" class="subcopy" style="color: rgb(202, 202, 202); margin: 0px;"><span><p display="inline" color="inherit" font-size="inherit" font-weight="inherit" class="sc-gzVnrw cSBsCl" style="color: inherit; display: inline; letter-spacing: initial; line-height: 1.53; font-family: inherit; font-size: inherit; margin: 0px; text-align: left; max-width: inherit;">Cancel anytime, effective at the end of the billing period.</p></span> <span></span></div>
+            <div class="subcopy" style="color: rgb(249, 249, 249); margin: 15px 0px 5px;"><span><p display="inline" color="inherit" font-size="inherit" font-weight="inherit" class="cSBsCl" style="color: inherit; display: inline; letter-spacing: initial; line-height: 1.53; font-family: inherit; font-size: inherit; margin: 0px; text-align: left; max-width: inherit;">Endless stories for just $79.99/year.</p></span></div>
+            <div color="#cacaca" class="subcopy" style="color: rgb(202, 202, 202); margin: 0px;"><span><p display="inline" color="inherit" font-size="inherit" font-weight="inherit" class="cSBsCl" style="color: inherit; display: inline; letter-spacing: initial; line-height: 1.53; font-family: inherit; font-size: inherit; margin: 0px; text-align: left; max-width: inherit;">Cancel anytime, effective at the end of the billing period.</p></span> <span></span></div>
           </div>
         </div>
         <div>
           <fieldset class="plans">
             <div>
-              <div tabindex="0" class="plan sc-dphlzf dHbCjA">
-                <input id="MONTH-0" type="radio" aria-checked="false" name="subscribeOptions" role="radio" class="plan-select sc-epGmkI gXkExL" value="monthly" checked="">
-                <label aria-labelledby="MONTH-0" for="MONTH-0" class="sc-bJHhxl vVxKs">
-                  <span><p class="sc-gzVnrw cSBsCl" style="color: rgb(249, 249, 249); letter-spacing: initial; line-height: 1.53; font-family: Avenir-Heavy, sans-serif; font-size: 15px; margin: 0px; max-width: inherit;">Monthly</p>
-                    <div color="grey7" class="sc-dnqmqq fine-print" style="color: rgb(202, 202, 202); margin: 0px;">$7.99</div>
+              <div tabindex="0" class="plan dHbCjA">
+                <input id="MONTH-0" type="radio" aria-checked="false" name="subscribeOptions" role="radio" class="plan-select gXkExL" value="monthly" checked="">
+                <label aria-labelledby="MONTH-0" for="MONTH-0" class="vVxKs">
+                  <span><p class="cSBsCl" style="color: rgb(249, 249, 249); letter-spacing: initial; line-height: 1.53; font-family: Avenir-Heavy, sans-serif; font-size: 15px; margin: 0px; max-width: inherit;">Monthly</p>
+                    <div color="grey7" class="fine-print" style="color: rgb(202, 202, 202); margin: 0px;">$7.99</div>
                   </span>
                   <div class="radio-check">
-                    <div class="sc-fQkuQJ hvCPQO">
-                      <svg alt="" aria-hidden="true" aria-label="radioCheck" color="white" role="img" version="1.1" viewBox="2 2 20 20" xmlns="http://www.w3.org/2000/svg" class="sc-chPdSV sFNPE" style="height: 20px; min-width: 20px; width: 20px; z-index: auto;">
-                        <path d="M8.861 14.443a.962.962 0 0 1-.687-.289l-2.566-2.622a.962.962 0 0 1 1.375-1.346l1.783 1.822 4.17-5.708a.962.962 0 1 1 1.537 1.158L9.63 14.06a.962.962 0 0 1-.769.383z" class="sc-kAzzGY dGwULW"></path>
+                    <div class="hvCPQO">
+                      <svg alt="" aria-hidden="true" aria-label="radioCheck" color="white" role="img" version="1.1" viewBox="2 2 20 20" xmlns="http://www.w3.org/2000/svg" class="sFNPE" style="height: 20px; min-width: 20px; width: 20px; z-index: auto;">
+                        <path d="M8.861 14.443a.962.962 0 0 1-.687-.289l-2.566-2.622a.962.962 0 0 1 1.375-1.346l1.783 1.822 4.17-5.708a.962.962 0 1 1 1.537 1.158L9.63 14.06a.962.962 0 0 1-.769.383z" class="dGwULW"></path>
                       </svg>
                     </div>
                   </div>
                 </label>
               </div>
-              <div tabindex="0" class="plan sc-dphlzf dHbCjA">
-                <input id="YEAR-1" type="radio" aria-checked="true" name="subscribeOptions" role="radio" class="plan-select sc-epGmkI gXkExL" value="yearly">
-                <label aria-labelledby="YEAR-1" for="YEAR-1" class="sc-bJHhxl vVxKs">
-                  <span><p class="sc-gzVnrw cSBsCl" style="color: rgb(249, 249, 249); letter-spacing: initial; line-height: 1.53; font-family: Avenir-Heavy, sans-serif; font-size: 15px; margin: 0px; max-width: inherit;">Annual</p>
-                    <div color="grey7" class="sc-dnqmqq fine-print" style="color: rgb(202, 202, 202); margin: 0px;">$79.99</div>
+              <div tabindex="0" class="plan dHbCjA">
+                <input id="YEAR-1" type="radio" aria-checked="true" name="subscribeOptions" role="radio" class="plan-select gXkExL" value="yearly">
+                <label aria-labelledby="YEAR-1" for="YEAR-1" class="vVxKs">
+                  <span><p class="cSBsCl" style="color: rgb(249, 249, 249); letter-spacing: initial; line-height: 1.53; font-family: Avenir-Heavy, sans-serif; font-size: 15px; margin: 0px; max-width: inherit;">Annual</p>
+                    <div color="grey7" class="fine-print" style="color: rgb(202, 202, 202); margin: 0px;">$79.99</div>
                   </span>
-                  <div class="sc-TuwoP radio-check">
-                    <div class="sc-fQkuQJ hvCPQO">
-                      <svg alt="" aria-hidden="true" aria-label="radioCheck" color="white" role="img" version="1.1" viewBox="2 2 20 20" xmlns="http://www.w3.org/2000/svg" class="sc-chPdSV sFNPE" style="height: 20px; min-width: 20px; width: 20px; z-index: auto;">
-                        <path d="M8.861 14.443a.962.962 0 0 1-.687-.289l-2.566-2.622a.962.962 0 0 1 1.375-1.346l1.783 1.822 4.17-5.708a.962.962 0 1 1 1.537 1.158L9.63 14.06a.962.962 0 0 1-.769.383z" class="sc-kAzzGY dGwULW"></path>
+                  <div class="radio-check">
+                    <div class="hvCPQO">
+                      <svg alt="" aria-hidden="true" aria-label="radioCheck" color="white" role="img" version="1.1" viewBox="2 2 20 20" xmlns="http://www.w3.org/2000/svg" class="sFNPE" style="height: 20px; min-width: 20px; width: 20px; z-index: auto;">
+                        <path d="M8.861 14.443a.962.962 0 0 1-.687-.289l-2.566-2.622a.962.962 0 0 1 1.375-1.346l1.783 1.822 4.17-5.708a.962.962 0 1 1 1.537 1.158L9.63 14.06a.962.962 0 0 1-.769.383z" class="dGwULW"></path>
                       </svg>
                     </div>
                   </div>
@@ -65,13 +65,13 @@
             <div class="fine-print">
               <div aria-label="Credit Card" role="radio" aria-checked="true" tabindex="0" class="payment-type">
                 <input id="credit-radio-icon" type="radio" aria-checked="true" name="paymentOptions" role="radio" class="payment-type-select credit-card" value="CREDIT" checked="">
-                <label aria-labelledby="credit-radio-icon" for="credit-radio-icon" class="sc-bSbAYC hyOFEv">
+                <label aria-labelledby="credit-radio-icon" for="credit-radio-icon" class="hyOFEv">
                   <span><i class="icon" role="img"></i>Credit Card</span>
                 </label>
               </div>
               <div aria-label="PayPal" role="radio" aria-checked="false" tabindex="0" class="payment-type">
                 <input id="paypal-radio-icon" type="radio" aria-checked="false" name="paymentOptions" role="radio" class="payment-type-select paypal" value="PAYPAL">
-                <label aria-labelledby="paypal-radio-icon" for="paypal-radio-icon" class="sc-bSbAYC hyOFEv">
+                <label aria-labelledby="paypal-radio-icon" for="paypal-radio-icon" class="hyOFEv">
                   <span><i class="icon" role="img"></i>PayPal</span>
                 </label>
               </div>
@@ -81,71 +81,56 @@
         <div>
           <div>
             <form class="billing-form billing-form--credit" novalidate="">
-              <fieldset class="sc-fMiknA bElFpM">
-                <div class="sc-caSCKo flex flex-column-reverse">
-                  <input aria-label="Name on card" id="billing-card-name" maxlength="1000" name="CARD_NAME" placeholder="" type="text" class="sc-fBuWsC DDynN sc-fAjcbJ jtWwTT" value="" style="background-image: none; background-repeat: initial; background-attachment: initial; background-size: initial; background-position: initial; cursor: auto;">
-                  <div class="sc-kjoXOD hZVhZH input-label" for="billing-card-name">NAME ON CARD</div>
+              <fieldset class="bElFpM">
+                <div class="flex flex-column-reverse">
+                  <input aria-label="Name on card" id="billing-card-name" maxlength="1000" name="CARD_NAME" placeholder="" type="text" class="DDynN jtWwTT" value="" style="background-image: none; background-repeat: initial; background-attachment: initial; background-size: initial; background-position: initial; cursor: auto;">
+                  <div class="hZVhZH input-label" for="billing-card-name">NAME ON CARD</div>
                 </div>
               </fieldset>
-              <fieldset class="sc-fMiknA gDMtlg sc-hkbPbT fIrAoy">
-                <div class="sc-caSCKo flex flex-column-reverse">
-                  <!-- <input aria-label="Card number" id="billing-card-number" maxlength="19" name="CARD_NUMBER" placeholder="" type="text" pattern="[0-9]*" class="sc-fBuWsC DDynN sc-fAjcbJ jFnYbg" value=""> -->
+              <fieldset class="gDMtlg fIrAoy">
+                <div id="recurly-elements" class="flex flex-column-reverse">
+                  <!-- <input aria-label="Card number" id="billing-card-number" maxlength="19" name="CARD_NUMBER" placeholder="" type="text" pattern="[0-9]*" class="DDynN jFnYbg" value=""> -->
                   <div id="billing-card-number"></div>
-                  <div class="sc-kjoXOD hZVhZH input-label" for="billing-card-number">CARD NUMBER</div>
+                  <div class="hZVhZH input-label" for="billing-card-number">CARD DETAILS</div>
                 </div>
               </fieldset>
-              <div class="card-row flex">
-                <fieldset class="sc-fMiknA bElFpM card-exp flex-1-1">
-                  <div class="sc-caSCKo flex flex-column-reverse">
-                    <!-- <input aria-label="Expiration date" id="billing-card-exp-date" maxlength="7" name="EXPIRATION" placeholder="MM/YY" type="tel" pattern="[0-9]*" class="sc-fBuWsC DDynN sc-fAjcbJ jtWwTT" value=""> -->
-                    <div id="billing-card-exp-date"></div>
-                    <div class="sc-kjoXOD hZVhZH input-label" for="billing-card-exp-date">EXPIRATION DATE</div>
-                  </div>
-                </fieldset>
-                <div class="csc-container show-billing flex-1-1">
-                  <fieldset class="sc-fMiknA bElFpM sc-jHZirH kQNeZd">
-                    <div class="sc-caSCKo flex flex-column-reverse">
-                      <!-- <input aria-label="CVV" id="billing-card-CSC" maxlength="4" name="CSC" placeholder="CVV" type="text" pattern="[0-9]*" class="sc-fBuWsC DDynN sc-fAjcbJ jtWwTT" value=""> -->
-                      <div id="billing-card-csc"></div>
-                      <div class="sc-kjoXOD hZVhZH input-label" for="billing-card-CSC">SECURITY CODE</div>
-                    </div>
-                  </fieldset>
-                </div>
-              </div>
-              <fieldset class="sc-fMiknA bElFpM">
-                <div class="sc-caSCKo flex flex-column-reverse">
-                  <input autocapitalize="none" autocomplete="off" autocorrect="off" id="zip-code-dropdown-input" spellcheck="false" tabindex="0" type="text" aria-autocomplete="list" aria-label="Zip Code" pattern="[0-9]*" inputmode="numeric" value="">
-                  <div class="sc-kjoXOD hZVhZH input-label" for="zip-code-dropdown-input">ZIP CODE</div>
+              <fieldset class="bElFpM">
+                <div class="flex flex-column-reverse">
+                  <input autocapitalize="none" autocomplete="off" autocorrect="off" id="zip-code-dropdown-input" data-recurly="postal_code" spellcheck="false" tabindex="0" type="text" aria-autocomplete="list" aria-label="Zip Code" pattern="[0-9]*" inputmode="numeric" value="">
+                  <div class="hZVhZH input-label" for="zip-code-dropdown-input">ZIP CODE</div>
                 </div>
               </fieldset>
-              <div class="sc-fgrSAo iMfAiE">
-                <div class="sc-dwztqd ilOIDs">
-                  <div color="#cacaca" font-size="12px" class="sc-dnqmqq fine-print" style="color: rgb(202, 202, 202); margin: 0px; padding: 0px 30px 0px 0px;">Store my payment information for use across the Simon Family of Companies. 
+              <div class="iMfAiE">
+                <div class="ilOIDs">
+                  <div color="#cacaca" font-size="12px" class="fine-print" style="color: rgb(202, 202, 202); margin: 0px; padding: 0px 30px 0px 0px;">Store my payment information for use across the Simon Family of Companies. 
                     <span style="white-space: nowrap;">
-                      <button aria-label="Learn more" color="secondary" font-size="inherit" font-weight="inherit" type="button" class="sc-cHGsZl cPGVxs">Learn more</button>
+                      <button aria-label="Learn more" color="secondary" font-size="inherit" font-weight="inherit" type="button" class="cPGVxs">Learn more</button>
                     </span>
                   </div>
                   <div>
-                    <label aria-label="Store my payment information for use across the Simon Family of Companies." aria-pressed="false" for="savePayment" tabindex="0" class="sc-FQuPU hTgTPB" style="flex-direction: row-reverse; justify-content: flex-end; margin: 0px auto;">
-                      <div class="sc-iuDHTM gINlXg">
-                        <div><input aria-checked="false" id="savePayment" role="switch" type="checkbox" class="sc-erNlkL jQZSb" value="">
-                          <span for="savePayment" class="sc-lnmtFM kUsoKK"></span>
+                    <label aria-label="Store my payment information for use across the Simon Family of Companies." aria-pressed="false" for="savePayment" tabindex="0" class="hTgTPB" style="flex-direction: row-reverse; justify-content: flex-end; margin: 0px auto;">
+                      <div class="gINlXg">
+                        <div><input aria-checked="false" id="savePayment" role="switch" type="checkbox" class="jQZSb" value="">
+                          <span for="savePayment" class="kUsoKK"></span>
                         </div>
                       </div>
                     </label>
                   </div>
                 </div>
               </div>
-              <div class="sc-dnqmqq fine-print terms-text" style="color: rgb(249, 249, 249); margin: 0px;">
+              <div class="fine-print terms-text" style="color: rgb(249, 249, 249); margin: 0px;">
                 <span>
-                  <p display="inline" color="inherit" font-size="inherit" font-weight="inherit" class="sc-gzVnrw cSBsCl" style="color: inherit; display: inline; letter-spacing: initial; line-height: 1.53; font-family: inherit; font-size: inherit; margin: 0px; text-align: left; max-width: inherit;">
+                  <p display="inline" color="inherit" font-size="inherit" font-weight="inherit" class="cSBsCl" style="color: inherit; display: inline; letter-spacing: initial; line-height: 1.53; font-family: inherit; font-size: inherit; margin: 0px; text-align: left; max-width: inherit;">
                     By clicking "Agree &amp; Subscribe," you are enrolling in automatic payments of $79.99/year (plus tax where applicable) that will continue until you cancel. You can cancel at any time, effective at the end of the billing period. There are no refunds or credits for partial months or years.
                   </p>
                 </span>
               </div>
-              <button aria-label="AGREE &amp; SUBSCRIBE" role="button" kind="primary" class="sc-Rmtcm jxaNdu submit-button" id="credit-submit-button" type="submit" value="submit">
+              <button aria-label="AGREE &amp; SUBSCRIBE" role="button" kind="primary" class="jxaNdu submit-button" id="credit-submit-button" type="submit" value="submit">
                 <span>AGREE &amp; SUBSCRIBE</span>
               </button>
+
+              <!-- Recurly.js will update this field automatically -->
+              <input type="hidden" name="recurly-token" data-recurly="token">
             </form>
           </div>
         </div>
@@ -159,7 +144,7 @@
 
     // Create a CardElement
     var elements = recurly.Elements();
-    var cardElement = elements.CardNumberElement({
+    var cardElement = elements.CardElement({
       style: {
         fontFamily: 'Open Sans',
         fontSize: '1rem',
@@ -168,15 +153,6 @@
       }
     });
     cardElement.attach('#billing-card-number');
-
-    var ccvElement = elements.CardCvvElement({
-      style: {
-        placeholder: {
-          content: 'CVV'
-        }
-      }
-    });
-    ccvElement.attach('#billing-card-csc');
   </script>
 
 </body>
